--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -9,6 +9,14 @@
 <nav class="navbar navbar-expand-lg navbar-dark sticky-nav">
   <div class="container">
     <a class="navbar-brand" href="<%= root_path %>">Jungle</a>
+    <% if session[:user_id] %>
+    
+    <%= link_to "Log Out", logout_path, method: :delete, class: "logout-link" %>
+    <% else %>
+      <%= link_to "Sign Up", new_user_path, class: "signup-link" %>
+      <%= link_to "Log In", login_path, class: "login-link" %>
+    <% end %>
+
     <button
       class="navbar-toggler"
       type="button"
